...
    switch self {
    case .newest:
      "最新"
    case .oldest:
      "最早"
    case .relevance:
      "相关"
    }
  }
}

enum ForumPostSearchSort: String, CaseIterable, Hashable, Identifiable, Sendable {
  case newest
...
